[gd_scene load_steps=7 format=3 uid="uid://dwocfaxnwkosl"]

[ext_resource type="Script" uid="uid://b25ntns06y3kc" path="res://enemies/scripts/hurtbox.gd" id="2_gmcir"]
[ext_resource type="Script" uid="uid://b2xavgnhnekor" path="res://scripts/hitbox.gd" id="3_o75mu"]
[ext_resource type="Texture2D" uid="uid://h6s8cgkk7ere" path="res://assets/sprites/spike monster B.png" id="4_hl3n1"]
[ext_resource type="Script" uid="uid://ct28a5ovxts7" path="res://scripts/node resources/health.gd" id="4_riqwt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ra7oa"]
size = Vector2(18, 12.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fkike"]
size = Vector2(18, 15.5)

[node name="spike enemy" type="CharacterBody2D"]

[node name="Health" type="Node" parent="."]
script = ExtResource("4_riqwt")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("2_gmcir")
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ra7oa")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("3_o75mu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -1.75)
shape = SubResource("RectangleShape2D_ra7oa")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(0.107143, 0.133475)
texture = ExtResource("4_hl3n1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.25)
shape = SubResource("RectangleShape2D_fkike")

[connection signal="health_depleted" from="Health" to="Health" method="_on_health_health_depleted"]
